src/main/java/org/example/stellog/global/error/exception/InvalidGroupException.java
package org.example.stellog.global.error.exception;

public class InvalidGroupException extends RuntimeException{
    public InvalidGroupException(String message) {
        super(message);
    }
}
